# Arya_Math_Lib

./: CMakeLists.txt  README.md
Arya/: CMakeLists.txt
Arya/include/: CMakeLists.txt
Arya/include/Arya/: CMakeLists.txt  MatrixX.h  VectorX.h
Arya/include/TEST/: CMakeLists.txt  MatrixX.h
Arya/src/: CMakeLists.txt
Arya/src/Arya/: CMakeLists.txt  MatrixX.cpp  VectorX.cpp
Arya/src/TEST/: CMakeLists.txt  MatrixX.cpp
examples/: CMakeLists.txt  Main.cpp
